added functionality to draw on grid on mouse hover. Added features to clear and resize the grid, and added option to draw with a default color or random colors.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
     </head>
     <body>
         <div class="container">
-            <div class="button_container">
-            </div>
-            <div class="grid_container">
-            </div>
+            <center>
+                <div class="button_container">
+                    <h1>Sketch Pad</h1>
+                    <p>Hover your mouse over the grid to draw!</p>
+                    <button id="clear">Clear</button>
+                    <button id="resize">Resize</button>
+                    <button id="default">Default Color</button>
+                    <button id="random">Random Color</button>
+                </div>
+            </center>
+            
+            <center>
+                <div class="grid_container"></div>
+            </center>
         </div>
     </body>
 </html>
